--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,73 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root > header {
+  margin: 1em;
+}
+
+#root > header h1 {
+  display: inline;
+  margin: 0;
+}
+
+.Search {
+  display: inline;
+  margin-left: 1em;
+  text-align: center;
+}
+
+.Search input {
+  width: 65%;
+}
+
+.Search button {
+  margin-left: 1em;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.Results,
+.Detail {
+  display: flex;
+  align-items: center;
+  flex: 0 0 100%;
+}
+
+.Results {
+  min-height: 220px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.Results .Loading {
+  margin-left: 3em;
+}
+
+.Detail img {
+  width: 100%;
+  height: 100%;
+}
+
+.Detail .Loading {
+  margin-left: 3em;
+  margin-top: 3em;
+}
+
+.Results img {
+  transition: all 0.2s ease-in-out;
+  border-radius: 2px;
+  border: 5px solid transparent;
+}
+
+.Results img.selected {
+  border: 5px solid greenyellow;
+}
+
+.Results img:hover,
+.Results img:focus {
+  transform: scale(2);
+}
